EX-13115 fix spacing between parent <li> and embedded <ul>

--- a/ui/components/MarkdownBlock/MarkdownBlock.module.css
+++ b/ui/components/MarkdownBlock/MarkdownBlock.module.css
@@ -6,6 +6,6 @@
   font-size: 1rem;
 }
 
-.markdown ul {
-  line-height: 2rem;
+.markdown li > ul {
+  margin-top: 0.5rem;
 }
